<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Re4 Ganados Soundboard</string>
    <string name="action_settings">Settings</string>
    <string name="aca">Aca</string>
    <string name="agarrenlo">Agarrenlo</string>
    <string name="ahiesta">Ahi Esta</string>
    <string name="ahiesta2">Ahi Esta 2</string>
    <string name="ahiesta3">Ahi Esta 3</string>
    <string name="ahiesta4">Ahi Esta 4</string>
    <string name="aporel">A por el</string>
    <string name="apuren">Apuren</string>
    <string name="asplastar">Aplastar</string>
    <string name="basta">Basta</string>
    <string name="basta2">Basta 2</string>
    <string name="bloqueale">Bloqueale</string>
    <string name="title_activity_second">Re4 Ganados Soundboard</string>
    <string name="hello_world">Hello world!</string>
    <string name="cabeza">Cabeza</string>
    <string name="cabron">Cabron</string>
    <string name="cabron2">Cabron 2</string>
    <string name="cerebro">Cerebro</string>
    <string name="cogedlo">Cogedlo</string>
    <string name="cogedlo2">Cogedlo 2</string>
    <string name="cogedlo3">Cogedlo 3</string>
    <string name="cogedlo4">Cogedlo 4</string>
    <string name="escape">Escape</string>
    <string name="estaherido">Esta Herido</string>
    <string name="forastero">Forastero</string>
    <string name="trampa">Trampa</string>
    <string name="imbecil">Imbecil</string>
    <string name="imbecil2">Imbecil 2</string>
    <string name="imbecil3">Imbecil 3</string>
    <string name="imbecil4">Imbecil 4</string>
    <string name="imbecil5">Imbecil 5</string>
    <string name="intruso">Intruso</string>
    <string name="islavivo">Isla Vivo</string>
    <string name="lord">Lord</string>
    <string name="lord2">Lord 2</string>
    <string name="malditasea">Maldita Sea</string>
    <string name="matalo">Matalo</string>
    <string name="matalo2">Matalo 2</string>
    <string name="mierda">Mierda</string>
    <string name="mierda2">Mierda 2</string>
    <string name="moriresvivir">Morir Es Vivir</string>
    <string name="moriresvivir2">Morir Es Vivir 2</string>
    <string name="muere">Muere</string>
    <string name="muere2">Muere 2</string>
    <string name="muerte">Muerte</string>
    <string name="picadillo">Picadillo</string>
    <string name="puedescorrer">Puedes Correr</string>
    <string name="quieromatar">Quiero Matar</string>
    <string name="rezar">Rezar</string>
    <string name="rezar2">Rezar 2</string>
    <string name="rezar3">Rezar 3</string>
    <string name="romperapedazos">Romper A Pedazos</string>
    <string name="socerdo">So Cerdo</string>
    <string name="tecogi">Te Cogi</string>
    <string name="tecogi2">Te Cogi 2</string>
    <string name="tevoyamatar">Te Voy A Matar</string>
    <string name="tevoyamatar2">Te Voy A Matar 2</string>
    <string name="tevoyamatar3">Te Voy A Matar 3</string>
    <string name="tevoyamatar4">Te Voy A Matar 4</string>
    <string name="tevoyamatar5">Te Voy A Matar 5</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="one">1/5</string>
    <string name="two">2/5</string>
    <string name="three">3/5</string>
    <string name="four">4/5</string>
    <string name="five">5/5</string>
    <string name="title_activity_third">Re4 Ganados Soundboard</string>
    <string name="title_activity_fourth">Re4 Ganados Soundboard</string>
    <string name="title_activity_fifth">Re4 Ganados Soundboard</string>
    <string name="title_activity_initial_window">Re4 Ganados Soundboard</string>

    <color name="black">#80000000</color>
    <color name="white">#ffffff</color>
    
</resources>
