<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.residentevil4ganadossoundboard.FourthActivity" >

    <Button
        android:id="@+id/fourth_button14"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:text="@string/mierda" />

    <Button
        android:id="@+id/fourth_button15"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignLeft="@+id/fourth_button14"
        android:layout_below="@+id/fourth_button14"
        android:layout_marginTop="16dp"
        android:text="@string/mierda2" />

    <Button
        android:id="@+id/fourth_button16"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignRight="@+id/fourth_button15"
        android:layout_below="@+id/fourth_button15"
        android:layout_marginTop="16dp"
        android:text="@string/moriresvivir" />

    <Button
        android:id="@+id/fourth_button17"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignRight="@+id/fourth_button16"
        android:layout_below="@+id/fourth_button16"
        android:layout_marginTop="20dp"
        android:text="@string/moriresvivir2" />

    <Button
        android:id="@+id/fourth_button18"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignRight="@+id/fourth_button17"
        android:layout_below="@+id/fourth_button17"
        android:layout_marginTop="22dp"
        android:text="@string/muere" />

    <Button
        android:id="@+id/fourth_button19"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignLeft="@+id/fourth_button18"
        android:layout_below="@+id/fourth_button18"
        android:layout_marginTop="22dp"
        android:text="@string/muere2" />

    <Button
        android:id="@+id/fourth_button20"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_above="@+id/fourth_button15"
        android:layout_alignParentRight="true"
        android:layout_marginRight="49dp"
        android:text="@string/muerte" />

    <Button
        android:id="@+id/fourth_button21"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_above="@+id/fourth_button16"
        android:layout_alignLeft="@+id/fourth_button20"
        android:text="@string/picadillo" />

    <Button
        android:id="@+id/fourth_button22"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_above="@+id/fourth_button17"
        android:layout_alignLeft="@+id/fourth_button21"
        android:text="@string/puedescorrer" />

    <Button
        android:id="@+id/fourth_button23"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_above="@+id/fourth_button18"
        android:layout_alignLeft="@+id/fourth_button22"
        android:text="@string/quieromatar" />

    <Button
        android:id="@+id/fourth_button24"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_above="@+id/fourth_button19"
        android:layout_alignLeft="@+id/fourth_button23"
        android:text="@string/rezar" />

    <Button
        android:id="@+id/fourth_button25"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignBaseline="@+id/fourth_button19"
        android:layout_alignBottom="@+id/fourth_button19"
        android:layout_alignLeft="@+id/fourth_button24"
        android:text="@string/rezar2" />

    <Button
        android:id="@+id/fourth_next2"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_above="@+id/fourth_textView2"
        android:layout_alignLeft="@+id/fourth_button25"
        android:text="@string/next" />

    <TextView
        android:id="@+id/fourth_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/fourth_next2"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="38dp"
        android:text="@string/four" />

    <Button
        android:id="@+id/fourth_back2"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_above="@+id/fourth_textView2"
        android:layout_alignLeft="@+id/fourth_button19"
        android:text="@string/back" />

</RelativeLayout>
