<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.residentevil4ganadossoundboard.MainActivity"
    android:background="@drawable/esteban"
     >

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:text="@string/aca"
        android:background="@color/black"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="16dp"
        android:text="@string/agarrenlo" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignRight="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="16dp"
        android:text="@string/ahiesta" />

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignRight="@+id/button3"
        android:layout_below="@+id/button3"
        android:layout_marginTop="20dp"
        android:text="@string/ahiesta2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignRight="@+id/button4"
        android:layout_below="@+id/button4"
        android:layout_marginTop="22dp"
        android:text="@string/ahiesta3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignLeft="@+id/button5"
        android:layout_below="@+id/button5"
        android:layout_marginTop="22dp"
        android:text="@string/ahiesta4" />

    <Button
        android:id="@+id/button8"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="35dp"
        android:text="@string/aporel" />

    <Button
        android:id="@+id/button7"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/button8"
        android:text="@string/apuren" />

    <Button
        android:id="@+id/button9"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignLeft="@+id/button8"
        android:text="@string/asplastar" />

    <Button
        android:id="@+id/button10"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignBaseline="@+id/button4"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignLeft="@+id/button9"
        android:text="@string/basta" />

    <Button
        android:id="@+id/button11"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignBaseline="@+id/button5"
        android:layout_alignBottom="@+id/button5"
        android:layout_alignLeft="@+id/button10"
        android:text="@string/basta2" />

    <Button
        android:id="@+id/button12"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignBaseline="@+id/button6"
        android:layout_alignBottom="@+id/button6"
        android:layout_alignLeft="@+id/button11"
        android:text="@string/bloqueale" />

    <Button
        android:id="@+id/next1"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button12"
        android:layout_marginBottom="70dp"
        android:layout_marginRight="25dp"
        android:text="@string/next" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/next1"
        android:layout_marginBottom="37dp"
        android:text="@string/one" />

</RelativeLayout>
